Refactor project package

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "com.example.vincentzhu.testapplication"
+        applicationId 'com.example.vincentzhu.testapplication'
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
@@ -17,6 +17,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
@@ -27,7 +29,6 @@ dependencies {
     compile files('libs/com.sun.jersey.jersey-core-1.4.0.jar')
     compile files('libs/commons-text-1.1.jar')
     compile files('libs/commons-lang3-3.5.jar')
-
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:palette-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
