--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bizdev.recipeapp.cookitup">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.camera2" android:required="true" />
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+
+    <uses-feature
+        android:name="android.hardware.camera2"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -40,8 +45,8 @@
         </activity>
         <activity
             android:name="com.bizdev.recipeapp.cookitup.Home"
-            android:launchMode="singleTop"
-            android:label="Home"/>
+            android:label="Home"
+            android:launchMode="singleTop" />
 
         <!-- Shows the list of ingredients entered by the user -->
         <activity
@@ -97,11 +102,12 @@
         <activity
             android:name="com.bizdev.recipeapp.cookitup.Admin"
             android:label="Admin" />
-        <activity android:name="com.bizdev.recipeapp.cookitup.AddIngredient"
+        <activity
+            android:name="com.bizdev.recipeapp.cookitup.AddIngredient"
             android:label="Add Ingredient">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.bizdev.recipeapp.cookitup.Home"/>
+                android:value="com.bizdev.recipeapp.cookitup.Home" />
         </activity>
         <activity
             android:name="com.bizdev.recipeapp.cookitup.SearchByName"
@@ -125,16 +131,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bizdev.recipeapp.cookitup.Home" />
         </activity>
-        <activity android:name="com.bizdev.recipeapp.cookitup.RecipePage">
-        </activity>
+        <activity android:name="com.bizdev.recipeapp.cookitup.RecipePage"></activity>
         <activity android:name="com.bizdev.recipeapp.cookitup.ResetPassword">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.bizdev.recipeapp.cookitup.Home"/>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.bizdev.recipeapp.cookitup.Home" />
         </activity>
 
-        <activity android:name="com.bizdev.recipeapp.cookitup.IngredientPage">
-        </activity>
+        <activity android:name="com.bizdev.recipeapp.cookitup.IngredientPage"></activity>
         <activity
             android:name="com.bizdev.recipeapp.cookitup.Favorites"
             android:label="Favorites"
